# ExpressLRS

./: .gitignore  .gitpod.yml  Dockerfile  Frsky_RX_R9M.h  README.md  openocd_stm32f1.cfg  unlock.how.to.2  workflow.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
BetaflightHex/: betaflight_4.3.0_STM32F405_norevision.hex
Doc/: BoM.xlsx  ExpressLRS Racelink Onair protocol (depracated).docx  LQanaylsis.xlsx  TableofHardware.docx  timing_diagram.pptx  ~$bleofHardware.docx
OpenTX/: readme.md
STL/: ExpressLRS.stl  ExpressLRS_bottom.stl  ExpressLRS_top_plate.stl  TTGO_LoRa_JR_Bay_Enclosure.stl  jr_module_tabs.stl  (+3 more)
src/python/: BFinitPassthrough.py  ETXinitPassthrough.py  MANIFEST.in  ReadLine.py  SerialHelper.py  UARTupload.py  UberConfiguration.py  UnifiedConfiguration.py  __init__.py  binary_configurator.py  binary_flash.py  bind.py  bootloader.py  build_env_setup.py  build_flags.py  build_html.py  copy_html.py  crc.py  crsf.py  elrs_helpers.py  esp_compress.py  fhss_random.py  firmware.py  flash_method_gui.py  imrc_meter_poll.py  install_dependencies.py  linspace_hopfreqs_gen.py  linspace_hopfreqs_gen_2400M.py  melodyparser.py  o.py  opentx.py  pyproject.toml  query_yes_no.py  r9mm_unlock_and_flash.py  randgentext_hopseq.py  runpython.py  serials_find.py  serve_html.py  set_model.py  setup.py  (+6 more)
src/python/esptool-3.0/: esptool.py
src/python/inputimeout/: __init__.py
src/python/minify/: html_minifier.py
src/python/old/: txmodem.py  txmodemtest.py  upload_using_betaflight_passthrough.py
src/python/test_tools/: power_sweep.py
(+1639 files in other folders)
