[project]
name = "binary_configurator"
version = "3.3.0"
description = "ExpressLRS Binary Installer"
requires-python = ">=3.6"
authors = [
    { name = "ExpressLRS Team" }
]
dependencies = [
    "pyserial"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry]
packages = [
    { include = "." },
    { include = "external" },
]
